# epispot

./: .codecov.yml  .coveragerc  .deepsource.toml  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  README-nightly.md  README.md  SECURITY.md  __init__.py  checker.sh  comps.html  coverage.sh  dependencies.py  fitters.html  index.html  index.md  lgtm.yml  models.html  models.py  params.json  plots.html  plots.py  pre.html  release.py  requirements-dev.txt  requirements-nightly.txt  requirements.txt  seircd-model.py  seird-model.py  setup-nightly.py  setup.cfg  setup.py  sir-model.py  sitemap.xml  upload.sh
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: feature-request.md
.github/workflows/: mod.yml  (+15 more)
.travis/: push.sh
comps/: index.html
dependencies/: fitter-imports  sir-model-imports.py
docs/: comps.html  comps.rst  conf.py  fitters.html  fitters.rst  index.html  index.rst  models.html  models.rst  plots.html  plots.rst  pre.html  pre.rst  test.txt
epispot/: __init__.py  comps.py  fitters.py  models.py  params.py  plots.py  pre.py
epispot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
epispot_en.egg-info/: PKG-INFO  SOURCES.txt
epispot_nightly.egg-info/: PKG-INFO  SOURCES.txt
es/: index.html
explorables/: README.md
fitters/: gradient-descent.py  index.html
models/: index.html
pdoc3_templates/: css.mako  head.mako  html.mako  logo.mako
plots/: index.html
requirements/: README.md  build-travis.sh  pre-requirements.txt  requirements-dev.txt  requirements-nightly.txt  requirements-travis.txt  requirements.txt
scripts/: README.md  branch.py  build.sh  conda.sh  docs.py  release.py
shell_tests/: README.md  basics.sh  test_invoke.py
tests/: README.md  basic-sir-model.py  fitting-test.py  fitting_test.py  seir-model-test.py  sf-case-study-covid-19.py  test_advanced.py  test_estimates.py  test_io.py  test_plotting.py  test_sir-variants.py  test_sir_variants.py  test_transforms.py  test_x.py
(+105 files in other folders)
