[metadata]
name = epispot
author = quantum9innovation
author_email = dev.quantum9innovation@gmail.com
description = A tool for modeling infectious diseases.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://epispot.github.io
project_urls =
    Repository Source = https://github.com/epispot/epispot
    Documentation = https://epispot.github.io/epispot
    Bug Tracker = https://github.com/epispot/epispot/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
package_dir =
    = epispot
packages = find:
python_requires = >=3.7

[options.packages.find]
where = epispot